--- a/html/original_url.html
+++ b/html/original_url.html
@@ -6,7 +6,7 @@
             </div>
             <div class="col-sm">
                 <p class="text-center">
-                <h5 class="text-center"> Ваша полная ссылка: {{ url[0].original }}</h5>
+                <h5 class="text-center"> Ваша полная ссылка: {{ url.original }}</h5>
                 </p>
             </div>
             <div class="col-sm">
